; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/pcmcia/ipwireless/extr_hardware.c_flush_packets_to_hw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/pcmcia/ipwireless/extr_hardware.c_flush_packets_to_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipw_hardware = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipw_hardware*)* @flush_packets_to_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flush_packets_to_hw(%struct.ipw_hardware* %0) #0 {
  %2 = alloca %struct.ipw_hardware*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.ipw_hardware* %0, %struct.ipw_hardware** %2, align 8
  %5 = load %struct.ipw_hardware*, %struct.ipw_hardware** %2, align 8
  %6 = getelementptr inbounds %struct.ipw_hardware, %struct.ipw_hardware* %5, i32 0, i32 0
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.ipw_hardware*, %struct.ipw_hardware** %2, align 8
  %10 = call i32 @get_current_packet_priority(%struct.ipw_hardware* %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.ipw_hardware*, %struct.ipw_hardware** %2, align 8
  %12 = getelementptr inbounds %struct.ipw_hardware, %struct.ipw_hardware* %11, i32 0, i32 0
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @spin_unlock_irqrestore(i32* %12, i64 %13)
  br label %15

15:                                               ; preds = %20, %1
  %16 = load %struct.ipw_hardware*, %struct.ipw_hardware** %2, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i64 @send_pending_packet(%struct.ipw_hardware* %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %15

21:                                               ; preds = %15
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @get_current_packet_priority(%struct.ipw_hardware*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i64 @send_pending_packet(%struct.ipw_hardware*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
